[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "funlib.show.neuroglancer"
version = "0.2"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jan Funke", email = "funkej@janelia.hhmi.org" }]
license = { text = "MIT" }

scripts = { neuroglancer = "funlib.show.neuroglancer.cli:main" }

dependencies = [
    "neuroglancer >= 2",
    "numpy",
    "zarr",
    "funlib.geometry >= 0.3.0",
    "funlib.persistence >= 0.6.0",
]

[tool.setuptools.packages.find]
include = ["funlib"]

[project.optional-dependencies]
docs = [
    "ipykernel>=6.29.5",
    "scikit-image>=0.25.2",
]
